5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1734_2502.log
== TEST (2019-05-16 09:24:36) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
print(p)
-- OUTPUT:
3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:31:19) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n-1):
		s=(-1)**c
		p=p+s*(1/(x*(3)**c))
		c=c+1
		x=x+2
	print(round(p, 8))
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:31:39) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n-1):
		s=(-1)**c
		p=p+s*(1/(x*(3)**c))
		c=c+1
		x=x+2
	print(round(p, 8))
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:32:15) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n-1):
		s=(-1)**c
		p=p+s*(1/(x*(3)**c))
		c=c+1
		x=x+2
	print(round(p, 8))
	
-- EXECUTION TIME:
0.154966
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
4.37100068
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
4.37100129
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
4.37102487
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:37:16) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(i<n):
		si=(-1)**c
		s=s+si*(1/(x*(3)**c))
		c=c+1
		x=x+2
		p=p+s
	print(round(p, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(i<n):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:37:32) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n):
		si=(-1)**c
		s=s+si*(1/(x*(3)**c))
		c=c+1
		x=x+2
		p=p+s
	print(round(p, 8))
	
-- OUTPUT:
13.518448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:39:06) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n):
		si=(-1)**c
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		p=p+s
	print(round(p, 8))
	
-- OUTPUT:
14.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:39:37) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n):
		si=(-1)**c
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		p=p*s
	print(round(p, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:39:48) 
-- CODE:
n=int(input("digite um numero: "))
p=(12)**0.5
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n):
		si=(-1)**c
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		p=p*s
	print(round(p, 8))
	
-- EXECUTION TIME:
0.1432
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.46410162
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.46410162
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.46410162
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:40:57) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
p=sqrt(12)
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n):
		si=(-1)**c
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		p=p*s
	print(round(p, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:41:32) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
x=1
c=0
s=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n):
		si=(-1)**c
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		p=sqrt(12)
		p=p*s
	print(round(p, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:42:24) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
x=1
c=0
s=0
i=0
if(n==1):
	print(round(p, 8))
else:
	while(i<n):
		si=(-1)**i
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		i=i+1
		p=sqrt(12)
		p=p*s
	print(round(p, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:43:07) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
x=1
c=0
s=0
i=0
if(n==1):
	print(round(sqrt(12), 8))
else:
	while(i<n):
		si=(-1)**i
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		i=i+1
		p=sqrt(12)
		p=p*s
	print(round(p, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:43:17) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
x=1
c=0
s=0
i=0
if(n==1):
	print(round(sqrt(12), 8))
else:
	while(i<n):
		si=(-1)**i
		s=s+si*(1//(x*(3**c)))
		c=c+1
		x=x+2
		i=i+1
		p=sqrt(12)
		p=p*s
	print(round(p, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:44:50) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
x=1
c=0
s=0
i=0
if(n==1):
	print(round(sqrt(12), 8))
else:
	while(i<n):
		si=(-1)**i
		s=s+si*(1/(x*(3**c)))
		c=c+1
		x=x+2
		i=i+1
	print(round(sqrt(12)*s, 8))
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:45:01) 
-- CODE:
from math import*
n=int(input("digite um numero: "))
x=1
c=0
s=0
i=0
if(n==1):
	print(round(sqrt(12), 8))
else:
	while(i<n):
		si=(-1)**i
		s=s+si*(1/(x*(3**c)))
		c=c+1
		x=x+2
		i=i+1
	print(round(sqrt(12)*s, 8))
	
-- EXECUTION TIME:
0.19824
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
